--- a/benchmark/Snakefile
+++ b/benchmark/Snakefile
@@ -191,13 +191,14 @@ rule sample_bindata:
     output:
         data="{output_dir}/data/adjmat=/{adjmat}/bn=/generateBinaryBN/{bn}/data=/n={n}/seed={replicate}.csv"
     shell:
-        "Rscript scripts/sample_binary_data.R " \
+        #"Rscript scripts/sample_binary_data.R " \
+        "Rscript scripts/sample_data_with_range_header.R " \
         "--filename {output.data} " \
         "--filename_bn {input.bn} " \
         "--samples {wildcards.n} " \
         "--seed {wildcards.replicate}"
 
-rule link_fixed_data:
+rule copy_fixed_data:
     output:
         data="{output_dir}/data/adjmat=/{adjmat}/bn=/None/data=/generation_method=fixed/name={filename}/n={n}/seed={replicate}.csv"
     shell:\
@@ -293,6 +294,7 @@ rule summarise_blip:
         "--adjmat_true {input.adjmat_true} " \
         "--adjmat_est {input.adjmat_est} " \
         "--filename_data {input.data} " \
+        "--range_header_data 1 " \ 
         "--filename {output.res} " \ 
         "--bdecatpar_chi {wildcards.bdecatpar_chi} " \
         "--bdecatpar_edgepf {wildcards.bdecatpar_edgepf} " \
@@ -381,6 +383,7 @@ rule summarise_itsearch:
         "--adjmat_est {input.adjmat_est} " \
         "--filename_data {input.data} " \
         "--filename {output} " \ 
+        "--range_header_data 1 " \ 
         "--bdecatpar_chi {wildcards.bdecatpar_chi} " \
         "--bdecatpar_edgepf {wildcards.bdecatpar_edgepf} " \
         " && python scripts/add_column.py --filename {output} --colname replicate     --colval {wildcards.replicate} "\
@@ -530,6 +533,7 @@ rule summarise_ordermcmc:
         "--adjmat_true {input.adjmat_true} " \
         "--adjmat_est {input.adjmat_est} " \
         "--filename_data {input.data} " \
+        "--range_header_data 1 " \ 
         "--filename {output} " \ 
         "--bdecatpar_chi {wildcards.bdecatpar_chi} " \
         "--bdecatpar_edgepf {wildcards.bdecatpar_edgepf} " \
@@ -624,6 +628,7 @@ rule summarise_pcalg:
         "--adjmat_est {input.adjmat_est} " \
         "--filename_data {input.data} " \
         "--filename {output} " \ 
+        "--range_header_data 1 " \ 
         "--bdecatpar_chi {wildcards.bdecatpar_chi} " \
         "--bdecatpar_edgepf {wildcards.bdecatpar_edgepf} " \
         " && python scripts/add_column.py --filename {output} --colname replicate   --colval {wildcards.replicate} "\
@@ -703,6 +708,7 @@ rule summarise_mmhc:
         "--adjmat_est {input.adjmat_est} " \
         "--filename_data {input.data} " \
         "--filename {output} " \ 
+        "--range_header_data 1 " \ 
         "--bdecatpar_chi {wildcards.bdecatpar_chi} " \
         "--bdecatpar_edgepf {wildcards.bdecatpar_edgepf} " \
         " && python scripts/add_column.py --filename {output} --colname replicate   --colval {wildcards.replicate} "\
@@ -867,7 +873,7 @@ rule summarise_fges:
         "--adjmat_est {input.adjmat_est} " \
         "--filename_data {input.data} " \
         "--filename {output.res} " \ 
-        "--range_header_data 0 " \ 
+        "--range_header_data 1 " \ 
         "--bdecatpar_chi {wildcards.bdecatpar_chi} " \
         "--bdecatpar_edgepf {wildcards.bdecatpar_edgepf} " \        
         " && python scripts/add_column.py --filename {output} --colname replicate   --colval {wildcards.replicate} "\
