--- a/benchmark/config.json
+++ b/benchmark/config.json
@@ -55,11 +55,9 @@
     },
     "plotting": {
         "algorithms": [
-            "pcalg", "gobnilp", "blip", "fges"
+             "blip"
         ],
-        "models":[
-            {"graph": "generateDAGMaxParents", 
-             "parameters": "generateBinaryBN"}
+        "models":[  
         ],
         "measures": [
             {
@@ -68,7 +66,8 @@
             "SHD": ["blip", "gobnilp"]
             }
         ],
-        "fixed_data":[]
+        "fixed_data":[{"graph":"myasia", 
+                       "data":"myasiandata"}]
     }
     ,
     "algorithms": {
@@ -79,7 +78,7 @@
             "solver.method": "winasobs",
             "indeg": 80,
             "time": [
-                5,10,20
+                10,20
             ],
             "allocated": 80,
             "scorefunction": "bdeu",
